update: OTP services & add swagger
